---
title: Abstract Property
---
classDiagram
    direction LR

    class AbstractProperty {
        <<Abstract>>
        -string name
        -string value
        +getName() string
        +setName(string)
        +getBoolean() bool
        +setBoolean(bool)
        +getArray() array|null
        +setArray(array|null)
        +getDate() DateTimeInterface|null
        +setDate(DateTimeInterface|null)
        +getInteger() int
        +setInteger(int)
        +getString() string|null
        +setString(string|null)
    }

    class UserProperty {
        -User user
        +getUser() User
        +setUser(User)
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- AbstractProperty
    AbstractProperty <|-- UserProperty
    AbstractProperty <|-- GlobalProperty
    User "0" --* "*" UserProperty

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click User call nodeCallback()
